<resources>
    <string name="app_name">OcomHanmaFacePay</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="please_set_constant_money">请设置定值消费金额（元）：</string>
    <string name="setting">设置</string>
    <string name="connected">已连接</string>
    <string name="unconnect">未连接</string>
    <string name="back">返回</string>
    <string name="pay_success">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_result">支付结果</string>
    <string name="paying">正在支付</string>
    <string name="action_search">搜索</string>
</resources>
