<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_container_background_deepGreen"
        android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="金额相关设置"
                    android:textColor="@color/common_text_white"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/common_text_white" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp">

                <TextView
                        android:id="@+id/RefundTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="交易记录退款开关"
                        android:textColor="@color/common_text_white"
                        android:textSize="12sp" />

                <Switch
                        android:id="@+id/refundSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:orientation="vertical"
                        android:showText="true"
                        android:switchTextAppearance="@style/SwitchTheme"
                        android:textOff="@string/close"
                        android:textOn="@string/open"
                        android:textSize="10sp"
                        android:thumb="@drawable/selector_switch_thumb"
                        android:track="@drawable/selector_switch_track"
                        tools:targetApi="lollipop" />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:id="@+id/constantMoneyTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/common_text_white"
                        android:textSize="12sp" />

                <Switch
                        android:id="@+id/constantMoneySwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:orientation="vertical"
                        android:showText="true"
                        android:switchTextAppearance="@style/SwitchTheme"
                        android:textOff="@string/close"
                        android:textOn="@string/open"
                        android:textSize="10sp"
                        android:thumb="@drawable/selector_switch_thumb"
                        android:track="@drawable/selector_switch_track"
                        tools:targetApi="lollipop" />
            </RelativeLayout>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foreground="?selectableItemBackgroundBorderless"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:visibility="visible">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/please_set_constant_money"
                        android:textColor="@color/common_text_white"
                        android:textSize="16sp" />


                <Button
                        android:id="@+id/constantMoneyBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="36dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="0dp"
                        android:background="@drawable/selector_button_white_broder"
                        android:padding="0dp"
                        android:text="@string/setting"
                        android:textColor="@color/common_text_white"
                        android:textSize="16sp" />

            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="用户相关设置"
                    android:textColor="@color/common_text_white"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/common_text_white" />

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                <TextView
                        android:id="@+id/registUserTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:textColor="@color/common_text_white"
                        android:textSize="12sp" />

                <Switch
                        android:id="@+id/registUserSwitch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="0dp"
                        android:orientation="vertical"
                        android:showText="true"
                        android:switchTextAppearance="@style/SwitchTheme"
                        android:textOff="@string/close"
                        android:textOn="@string/open"
                        android:textSize="10sp"
                        android:thumb="@drawable/selector_switch_thumb"
                        android:track="@drawable/selector_switch_track"
                        tools:targetApi="lollipop" />
            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="门禁设置"
                    android:textColor="@color/common_text_white"
                    android:textStyle="bold" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/common_text_white" />

            <TextView
                    android:id="@+id/quickPayTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/common_text_white"
                    android:textSize="12sp" />

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="10dp"
                        android:text="自动关门时长"
                        android:textColor="@color/common_text_white" />

                <org.angmarch.views.NiceSpinner
                        android:id="@+id/auto_close_time"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:textSize="18sp"
                        app:arrowTint="@color/common_text_white"
                        app:backgroundSelector="@color/color_gray80"
                        app:lineHeight="15dp"
                        app:textTint="@color/common_text_white" />
            </FrameLayout>

            <TextView
                    android:id="@+id/settingBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/common_container_background_lightGreen"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="打开系统设置"
                    android:textColor="@color/common_text_white" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>